Fix Context view not being fully formed on startup

Something from inside Plasma tries to resize context view's sceneRect()
to 200x200 px. I don't know why this happens, but let's hope we'll have
QML context view soon, so don't investigate and use a work-around.

BUG: 292895
FIXED-IN: 2.6
DIGEST: popular bug fixed in Amarok